# book_picto

./: .gitignore  Makefile  README.md  compose.yaml  instructions_homepage_bottone.md  instructions_nav.md
Instructions_agent_vscode/: Instruction_V5.md  instruction_home.md  instruction_images.md  instruction_multi_libro.md  instruction_style.md  instructions_bottone_apri_pagina.md  instructions_cardProperties.md  instructions_pannello_modifica_link.md
backend/: README.md  pyproject.toml
backend/app/: db.py  main.py  seed.py
backend/app/api/: assets.py  books.py  cards.py  export_import.py  pages.py  runtime.py
backend/app/core/: config.py
backend/app/models/: asset.py  book.py  card.py  page.py
backend/app/schemas/: asset.py  book.py  card.py  page.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/books/: page.tsx
frontend/app/books/[bookId]/: page.tsx
frontend/app/books/[bookId]/edit/: page.tsx
frontend/app/books/[bookId]/pages/[pageId]/: page.tsx  runtime.module.css
frontend/app/books/[bookId]/pages/[pageId]/edit/: page.tsx
frontend/app/books/[bookId]/pages/new/: page.tsx
frontend/app/books/new/: page.tsx
frontend/app/builder/books/[bookId]/pages/[pageId]/: page.tsx  panel.module.css
frontend/components/: BookCard.tsx  Navbar.tsx
frontend/lib/: api.ts  linkButtonPref.ts
workflows/: ci.yml
